Build more distributions